# aimi-kidney-ct

./: .gitignore  .pre-commit-config.yaml  README.md  kits_metrics.py  model_performance.ipynb  model_performance_aimi2.ipynb  pyproject.toml
qa-results/: qa-results.csv  tumor_count_report.csv
qa-results/ai-segmentations-dcm/: ai_TCGA-B0-4713_19920622_0.seg.dcm  ai_TCGA-B0-4845_19851224_0.seg.dcm  ai_TCGA-B0-4845_19860225_0.seg.dcm  ai_TCGA-B0-4845_19860604_0.seg.dcm  ai_TCGA-B0-5706_19870308_0.seg.dcm  ai_TCGA-BP-4347_19891101_0.seg.dcm  ai_TCGA-BP-4801_19910423_0.seg.dcm  ai_TCGA-BP-4801_19910423_1.seg.dcm  ai_TCGA-BP-4803_19910603_0.seg.dcm  ai_TCGA-BP-4964_19890320_0.seg.dcm  ai_TCGA-BP-4964_19890320_1.seg.dcm  ai_TCGA-BP-4971_19890927_0.seg.dcm  ai_TCGA-BP-4975_19900105_0.seg.dcm  ai_TCGA-BP-4982_19900425_0.seg.dcm  ai_TCGA-BP-4994_19900916_0.seg.dcm  ai_TCGA-BP-5183_19910114_0.seg.dcm  ai_TCGA-BP-5186_19910423_0.seg.dcm  ai_TCGA-BP-5199_19920103_0.seg.dcm  ai_TCGA-BP-5200_19920111_0.seg.dcm  ai_TCGA-CJ-4636_19940612_0.seg.dcm  ai_TCGA-CJ-4636_19940612_1.seg.dcm  ai_TCGA-CJ-4637_19940701_0.seg.dcm  ai_TCGA-CJ-4637_19940701_3.seg.dcm  ai_TCGA-CJ-4641_19950813_0.seg.dcm  ai_TCGA-CJ-4641_19950813_3.seg.dcm  ai_TCGA-CJ-4642_19950106_0.seg.dcm  ai_TCGA-CJ-4642_19950106_1.seg.dcm  ai_TCGA-CJ-4642_19950302_0.seg.dcm  ai_TCGA-CJ-4642_19950302_1.seg.dcm  ai_TCGA-CJ-4642_19950331_0.seg.dcm  ai_TCGA-CJ-4642_19950331_1.seg.dcm  ai_TCGA-CJ-4642_19950723_0.seg.dcm  ai_TCGA-CJ-4642_19950723_1.seg.dcm  ai_TCGA-CJ-4871_19940108_0.seg.dcm  ai_TCGA-CJ-4871_19940108_1.seg.dcm  ai_TCGA-CJ-4872_19931126_0.seg.dcm  ai_TCGA-CJ-4872_19931126_1.seg.dcm  ai_TCGA-CJ-4873_19940121_1.seg.dcm  ai_TCGA-CJ-4873_19940121_2.seg.dcm  (+60 more)
(+20 files in other folders)
