[project]
name = "aimi-kidney-ct"
version = "0.1.1"
description = "Segmentation of kidney in contrast enhanced CT images"
authors = [{ name = "Jeff VanOss", email = "jeff.vanoss@bamfhealth.com" }]
license = "MIT"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "connected-components-3d>=3.19.0",
    "numpy>=1.26",
    "pandas>=2.2.3",
    "pydicom>=3.0.1",
    "pydicom-seg>=0.4.1",
    "requests>=2.32.3",
    "scikit-learn>=1.5.2",
    "seaborn>=0.13.2",
    "simpleitk>=2.4.0",
    "ipykernel>=6.29.5",
    "idc-index>=0.2.11",
]

[tool.uv]
dev-dependencies = ["mypy>=1.12.0", "pre-commit>=4.0.1", "ruff>=0.6.9"]


[tool.ruff]
lint.select = ["I", "UP", "SIM"]
lint.ignore = ["UP007"]
lint.fixable = ["ALL"]

[tool.mypy]
no_implicit_optional = false
